<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/constraint_margin"
        android:layout_marginStart="@dimen/constraint_margin"
        android:layout_marginEnd="@dimen/constraint_margin"
        android:clickable="true"
        android:focusable="true">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_elevation"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/textIcons">
            <android.support.constraint.ConstraintLayout
                android:id="@+id/cardView_constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_item_bg">

                <TextView
                    android:id="@+id/recipe_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/recipe_name_margin"
                    android:paddingStart="@dimen/recipe_name_horizontal_padding"
                    android:paddingTop="@dimen/recipe_name_vert_padding"
                    android:paddingBottom="@dimen/recipe_name_vert_padding"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Nutella Pie"
                    android:background="@color/textIcons"
                    tools:ignore="RtlSymmetry" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/constraint_recipe_details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recipe_item">

                    <TextView
                        android:id="@+id/ingredients_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/card_label_start"
                        android:layout_marginTop="@dimen/card_label_vert"
                        android:layout_marginBottom="@dimen/card_label_vert"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/ingredients_label"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

                    <TextView
                        android:id="@+id/ingredients_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/card_label_count_start"
                        app:layout_constraintStart_toEndOf="@id/ingredients_label"
                        app:layout_constraintTop_toTopOf="@id/ingredients_label"
                        tools:text="8"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

                    <TextView
                        android:id="@+id/step_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/card_label_start"
                        app:layout_constraintStart_toEndOf="@id/ingredients_count"
                        app:layout_constraintTop_toTopOf="@id/ingredients_count"
                        android:text="@string/step_label"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                    <TextView
                        android:id="@+id/step_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/card_label_count_start"
                        app:layout_constraintStart_toEndOf="@id/step_label"
                        app:layout_constraintTop_toTopOf="@id/step_label"
                        tools:text="8"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

                    <TextView
                        android:id="@+id/serve_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/card_label_start"
                        app:layout_constraintStart_toEndOf="@id/step_count"
                        app:layout_constraintTop_toTopOf="@id/step_label"
                        android:text="@string/serves_label"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

                    <TextView
                        android:id="@+id/serve_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/card_label_count_start"
                        app:layout_constraintStart_toEndOf="@id/serve_label"
                        app:layout_constraintTop_toTopOf="@id/serve_label"
                        tools:text="8"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
                </android.support.constraint.ConstraintLayout>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</layout>